--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.2.4",
+    "mongoose": "^7.0.1",
     "next": "13.2.4",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-ripples": "^2.2.1",
+    "react-toastify": "^9.1.1",
+    "react-toggle-dark-mode": "^1.1.1",
+    "swr": "^2.1.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
